Bug #16319 XML: extractvalue() returns syntax errors for some functions
Submitted: 9 Jan 2006 23:28 Modified: 20 Apr 2006 3:33
Reporter: Peter Gulutzan Email Updates:
Status: Closed
Category:Server: XML Severity:S3 (Non-critical)
Version:5.1.5-alpha-debug OS:Linux (SUSE 10.0)
Assigned to: Alexander Barkov Target Version:

[9 Jan 2006 23:28] Peter Gulutzan
Description:
With extractvalue(), there are some functions that cause
"XPATH syntax error" messages. I haven't checked for all
functions, but I believe there are at least ten which
cause this error.

How to repeat:
mysql> select extractvalue('<a>A</a>','/a[string-length("A")=1]');
ERROR 1105 (HY000): XPATH syntax error: '("A")=1]'
[9 Jan 2006 23:50] Miguel Solorzano
mysql> select extractvalue('<a>A</a>','/a[string-length("A")=1]');
ERROR 1105 (HY000): XPATH syntax error: '("A")=1]'
[7 Apr 2006 9:15] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/4605
[19 Apr 2006 6:11] Alexander Barkov
Pushed into 5.1.10
[19 Apr 2006 6:19] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/5117
[20 Apr 2006 3:33] Jon Stephens
Thank you for your bug report. This issue has already been fixed
in the latest released version of that product, which you can download at 
http://www.mysql.com/downloads/

Additional info:

Documented fix in 5.1.10 changelog. Closed.